# artifact_serde

./: Cargo.toml  LICENSE  README.md
src/: de.rs  lib.rs  ser.rs
tests/data/: deck_one.json
