[package]
name = "artifact_serde"
version = "0.1.0"
authors = ["Alec Goncharow <Alec.Goncharow@gmail.com>"]
description= "A small library used to deserializing, and possibliy serializing the base64 Artifact strings"
repository="https://github.com/AlecGoncharow/artifact_serde"

[badges]
maintenance = {status = "experimental"}

[dependencies]
base64 = "*"
regex = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
